tests/specs/ecosystem/std/archive/0_221_0.test
std/archive/0.221.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.221.0": "jsr:@std/io@0.221.0"
    },
    "jsr": {
      "@std/io@0.221.0": {
        "integrity": "faf7f8700d46ab527fa05cc6167f4b97701a06c413024431c6b4d207caa010da"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  /** Constructs a new instance. */ constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                                                              ~~~~~~
    at file://<tmpdir>/untar.ts:16:127

